--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "ownerNumber": ["6285921165857@s.whatsapp.net"],
-  "ownerName": ["Christian ID"],
-  "ownerNum": "6285921165857",
-  "botName": "Hitomi MD",
-  "footer": "© Hitomi MD 2022",
-  "fake": "Bot By Christian ID",
+  "ownerNumber": ["6282146218274@s.whatsapp.net"],
+  "ownerName": ["RielGanzz"],
+  "ownerNum": "6282146218274",
+  "botName": "Khurushi-MD",
+  "footer": "© Khurushi MD 2022",
+  "fake": "Bot By RielGanzz",
   "sessionName": "hitomi",
   "pathimg": "./media/hitomi.jpg",
   
@@ -15,14 +15,14 @@
   "lolkey": "Beli Sendiri Ygy",
   "zenzkey": "4cb6451aa6",
   
-  "ButtonTextMenu1": "Youtube Owner",
-  "ButtonTextMenu2": "Rest Api",
+  "ButtonTextMenu1": "Donasi pulsa",
+  "ButtonTextMenu2": "Group Support",
   "quickReplyButton3": "List Menu 📑",
   "quickReplyButton4": "Donasi 💰",
   "quickReplyButton5": "Rate Bot ⭐",
    
-  "ButtonMenuLink1": "https://youtube.com/c/ChristianID99",
-  "ButtonMenuLink2": "https://rest-api-hitomi.herokuapp.com/docs",
+  "ButtonMenuLink1": "NOPE ; 083813417529",
+  "ButtonMenuLink2": "https://chat.whatsapp.com/IqZke0cAG6G3iVsnB9myfL",
   "displayTextMenu3": "command",
   "displayTextMenu4": "donasi",
   "displayTextMenu5": "rating",
@@ -31,7 +31,7 @@
   "textBarisDonate1": "DANA : SCAN QRIS DIATAS",
   "textBarisDonate2": "OVO : SCAN QRIS DIATAS",
   "textBarisDonate3": "GOPAY : SCAN QRIS DIATAS",
-  "textBarisDonate4": "PULSA : 0813-2850-7885",
+  "textBarisDonate4": "PULSA : 083813417529",
   
   "randomlink": ["https://i.ibb.co/Ybbz3qm/b1511a60173f.jpg","https://i.ibb.co/gzx9tkF/e525998814c2.jpg","https://i.ibb.co/7t4ndRM/9d4d951fe9c8.jpg","https://i.ibb.co/61WQK7v/44d84e1d31fc.jpg"],
   "welcomenya": "Intro Dulu Yuk Kak\n\n\n📛 Nama : \n🔞 Umur :\n🏙️ Askot :\n👫 Gender :\n\nSemoga Kamu Senang Berada Disini Serta Jangan Lupa Untuk Membaca Dan Mematuhi Rules Yang Ada",
